# ChangeLog for x11-plugins/wmnetmon
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmnetmon/Attic/ChangeLog,v 1.11 2008/01/20 15:20:09 nixnut Exp $

  20 Jan 2008; nixnut <nixnut@gentoo.org> wmnetmon-0.2_p5.ebuild:
  Stable on ppc wrt bug 206705

*wmnetmon-0.2_p5 (19 Jan 2008)

  19 Jan 2008; Samuli Suominen <drac@gentoo.org> +wmnetmon-0.2_p5.ebuild:
  Bump to correct versioning scheme and keyword ~amd64.

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>; wmnetmon-0.2.ebuild:
  Drop virtual/x11 references.

  21 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  31 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org> wmnetmon-0.2.ebuild:
  Fixed DEPEND for modular X.

  16 Dec 2005; Diego Pettenò <flameeyes@gentoo.org> wmnetmon-0.2.ebuild:
  Replace root:root in root:0. Bug #103563.

  24 Nov 2004; Jason Wever <weeve@gentoo.org> wmnetmon-0.2.ebuild:
  Added ~sparc keyword.

  02 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  wmnetmon-0.2.ebuild:
  Masked wmnetmon-0.2.ebuild stable for ppc

  28 Apr 2004; David Holm <dholm@gentoo.org> wmnetmon-0.2.ebuild:
  Added to ~ppc.

*wmnetmon-0.2 (02 Nov 2003)

  02 Nov 2003; Markus Nigbur <pyrania@gentoo.org> wmnetmon-0.2.ebuild:
  Initial import.
