@@ -1,3 +1,0 @@
-MD5 30dec9fdec039da92a612646cc228e62 wmnetmon-0.2p5.tar.gz 49990
-RMD160 7cd0179cbd0e4f83333cfadf83b3eb0ed0a010b3 wmnetmon-0.2p5.tar.gz 49990
-SHA256 6c7576c9cbd95c35f14dcfa985e5f7b33341b3c27395e0962c71f4cec6c45f68 wmnetmon-0.2p5.tar.gz 49990
