@@ -1,6 +1,9 @@
 # ChangeLog for x11-plugins/wmnetmon
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmnetmon/Attic/ChangeLog,v 1.11 2008/01/20 15:20:09 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmnetmon/Attic/ChangeLog,v 1.12 2008/01/21 11:01:04 s4t4n Exp $
+
+  21 Jan 2008; Michele Noberasco <s4t4n@gentoo.org> wmnetmon-0.2_p5.ebuild:
+  Stable on x86 wrt bug 206705. Wiped out other ebuilds.
 
   20 Jan 2008; nixnut <nixnut@gentoo.org> wmnetmon-0.2_p5.ebuild:
   Stable on ppc wrt bug 206705
